--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/core": "3.12.1",
+    "@ionic-native/admob": "^3.14.0",
+    "@ionic-native/core": "^3.12.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
+    "angular2-image-upload": "^0.6.6",
     "ionic-angular": "3.5.3",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
@@ -32,7 +34,9 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.0.2",
-    "@ionic/cli-plugin-ionic-angular": "1.3.2",
+    "@ionic/cli-plugin-cordova": "1.5.0",
+    "@ionic/cli-plugin-ionic-angular": "1.4.0",
+    "ionic": "3.6.0",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project"
