--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/storage": "2.0.1",
     "angular2-image-upload": "^0.6.6",
     "ionic-angular": "3.5.3",
+    "ionic-img-viewer": "^2.4.0",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
