--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser-dynamic": "4.1.3",
     "@ionic-native/admob": "^3.14.0",
     "@ionic-native/core": "^3.12.1",
+    "@ionic-native/photo-viewer": "^4.1.0",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
     "angular2-image-upload": "^0.6.6",
+    "com-sarriaroman-photoviewer": "^1.1.10",
     "ionic-angular": "3.5.3",
     "ionic-img-viewer": "^2.4.0",
     "ionicons": "3.0.0",
@@ -35,7 +37,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.0.2",
-    "@ionic/cli-plugin-cordova": "1.5.0",
+    "@ionic/cli-plugin-cordova": "1.6.1",
     "@ionic/cli-plugin-ionic-angular": "1.4.0",
     "ionic": "3.6.0",
     "typescript": "2.3.4"
