--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,7 @@
 {
   "name": "yohome",
   "app_id": "",
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "ng2-pdf-viewer": "node_modules/ng2-pdf-viewer",
+  "pdfjs-dist": "node_modules/pdfjs-dist"
 }
