--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "ionic-angular": "3.5.3",
     "ionic-img-viewer": "^2.4.0",
     "ionicons": "3.0.0",
+    "ng2-pdf-viewer": "^1.2.2",
+    "pdfjs-dist": "^1.9.456",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12"
@@ -42,5 +44,12 @@
     "ionic": "3.7.0",
     "typescript": "2.3.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "ng2-pdf-viewer": {
+    "main": "dist/index.js",
+    "defaultExtension": "js"
+  },
+  "pdfjs-dist": {
+    "defaultExtension": "js"
+  }
 }
