--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,5 +3,8 @@
   "app_id": "",
   "type": "ionic-angular",
   "ng2-pdf-viewer": "node_modules/ng2-pdf-viewer",
-  "pdfjs-dist": "node_modules/pdfjs-dist"
+  "pdfjs-dist": "node_modules/pdfjs-dist",
+  "integrations": {
+    "cordova": {}
+  }
 }
