--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@ionic-native/photo-viewer": "^4.1.0",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.1.3",
     "angular2-image-upload": "^0.6.6",
     "com-sarriaroman-photoviewer": "^1.1.10",
+    "cordova-sqlite-storage": "^2.1.2",
     "ionic-angular": "3.5.3",
     "ionic-img-viewer": "^2.4.0",
+    "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
     "ng2-pdf-viewer": "^1.2.2",
     "pdfjs-dist": "^1.9.456",
@@ -38,6 +40,7 @@
     "zone.js": "0.8.12"
   },
   "devDependencies": {
+    "@angular/cli": "^1.5.2",
     "@ionic/app-scripts": "2.0.2",
     "@ionic/cli-plugin-cordova": "1.6.2",
     "@ionic/cli-plugin-ionic-angular": "1.4.1",
@@ -53,5 +56,10 @@
   },
   "pdfjs-dist": {
     "defaultExtension": "js"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {}
+    }
   }
 }
